# janus

./: .editorconfig  .gitignore  .travis.yml  LICENSE  LICENSE.md  Language-Janus-AST.html  Language-Janus-Interp.html  Language-Janus-Parser.html  Language-Janus-Stdlib.html  Language-Janus.html  README.md  doc-index.html  index-frames.html  index.html  janus.cabal  janus.haddock  janus.txt  mini_Language-Janus-AST.html  mini_Language-Janus-Interp.html  mini_Language-Janus-Parser.html  mini_Language-Janus-Stdlib.html  mini_Language-Janus.html
doc/: Language-Specification.md
examples/: factorial.js  fizzbuzz.js  helloworld.js
repl/: Main.hs
runner/: Main.hs
spec/: Spec.hs
spec/Language/Janus/: ASTSpec.hs  InterpreterSpec.hs  ParserSpec.hs  StdlibSpec.hs  TestUtil.hs
src/: Language.Janus.AST.html  Language.Janus.Interp.html  Language.Janus.Parser.Expressions.html  Language.Janus.Parser.Grammar.html  Language.Janus.Parser.Lexer.html  Language.Janus.Parser.Statements.html  Language.Janus.Parser.html  Language.Janus.Stdlib.html  Language.Janus.html
src/Language/: Janus.hs
src/Language/Janus/: AST.hs  Interp.hs  Interp.hs-boot  Interpreter.hs  Parser.hs  Stdlib.hs
src/Language/Janus/AST/: Expr.hs  Stmt.hs  Val.hs
src/Language/Janus/Interp/: Error.hs  Monad.hs
src/Language/Janus/Interpreter/: Evaluable.hs
src/Language/Janus/Parser/: Expressions.hs  Grammar.hs  Lexer.hs  Statements.hs
