name:                janus
version:             0.1.0.0
synopsis:            Simple scripting language written in Haskell, project for Fuctional Programming Course at AGH UST
description:         Please see README.md
homepage:            https://github.com/mkaput/janus#readme
license:             MIT
license-file:        LICENSE.md
author:              Marek Kaput, Radomir Krawczykiewicz
maintainer:          marek.kaput@outlook.com
copyright:           Copyright (C) 2016 Marek Kaput, Radomir Krawczykiewicz
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Janus.AST,
                       Language.Janus.Interp,
                       Language.Janus.Parser,
                       Language.Janus.Stdlib
  other-modules:       Language.Janus.Parser.Grammar,
                       Language.Janus.Parser.Lexer
  build-depends:       base >= 4.7 && < 5,
                       containers == 0.5.*,
                       hashable,
                       hashtables == 1.2.*,
                       mtl == 2.2.*,
                       parsec == 3.1.*
  default-language:    Haskell2010

executable janus-repl
  hs-source-dirs:      repl
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       janus,
                       mtl
  default-language:    Haskell2010

executable janus-run
  hs-source-dirs:      runner
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       janus,
                       optparse-applicative >= 0.12
  default-language:    Haskell2010

test-suite janus-spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      spec
  main-is:             Spec.hs
  other-modules:       Language.Janus.ASTSpec,
                       Language.Janus.InterpreterSpec,
                       Language.Janus.ParserSpec,
                       Language.Janus.StdlibSpec,
                       Language.Janus.TestUtil
  build-depends:       base,
                       janus,
                       HUnit,
                       hspec == 2.2.*,
                       QuickCheck == 2.8.*,
                       parsec,
                       mtl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mkaput/janus
